deploy: a4af9b8b5011399d36e4649f795894c6cc4b505b

--- a/404.html
+++ b/404.html
@@ -86,7 +86,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Recipes</a></li><li class="chapter-item expanded affix "><li class="part-title">food</li><li class="chapter-item expanded "><a href="halfy-biryani.html">Halfy's Biryani</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Recipes</a></li><li class="chapter-item expanded affix "><li class="part-title">Breakfast</li><li class="chapter-item expanded "><a href="vegan-breakfast-cookies.html">Vegan Breakfast Cookies</a></li><li class="chapter-item expanded affix "><li class="part-title">food</li><li class="chapter-item expanded "><a href="halfy-biryani.html">Halfy's Biryani</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
