--- a/print.html
+++ b/print.html
@@ -86,7 +86,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Recipes</a></li><li class="chapter-item expanded affix "><li class="part-title">food</li><li class="chapter-item expanded "><a href="halfy-biryani.html">Halfy's Biryani</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Recipes</a></li><li class="chapter-item expanded affix "><li class="part-title">Breakfast</li><li class="chapter-item expanded "><a href="vegan-breakfast-cookies.html">Vegan Breakfast Cookies</a></li><li class="chapter-item expanded affix "><li class="part-title">food</li><li class="chapter-item expanded "><a href="halfy-biryani.html">Halfy's Biryani</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -156,10 +156,44 @@
 
                         <h1 id="recipes"><a class="header" href="#recipes">Recipes</a></h1>
 <p>A collection of recipes (for food) that I have used in the past.</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="vegan-breakfast-cookies"><a class="header" href="#vegan-breakfast-cookies">Vegan Breakfast Cookies</a></h1>
+<p>These Vegan Breakfast Cookies are healthy enough to eat for breakfast or a post-workout snack! Made with oats, seeds, and almond butter, these cookies are deceptively delicious and are vegan, gluten-free, oil-free, refined sugar-free, and soy-free! </p>
+<p><img src="images/vegan-breakfast-cookies/header.jpg" alt="Vegan Breakfast Cookies header image" /></p>
+<h2 id="ingredients"><a class="header" href="#ingredients">Ingredients</a></h2>
+<ul>
+<li>2 tbs Ground Flaxseed Meal</li>
+<li>2 cups Rolled Oats (certified gluten-free, as needed)</li>
+<li>0.5 cups Shredded Coconut</li>
+<li>0.5 tsp Baking Powder</li>
+<li>0.5 tsp Baking Soda</li>
+<li>0.5 tsp Fine Sea Salt</li>
+<li>0.75 cups Smooth, Creamy Variety of Almond Butter (can substitute Cashew Butter)</li>
+<li>0.5 cups Pure Maple Syrup</li>
+<li>1.5 tsp Pure Vanilla Extract</li>
+<li>1.5 cups Dried Fruit (Cranberries, Currants, Chopped Apricots)</li>
+<li>0.5 cups Pepitas and/or Sunflower Seeds, chopped</li>
+<li>0.33 cups Hemp Seeds (aka Hemp Hearts)</li>
+</ul>
+<h2 id="steps"><a class="header" href="#steps">Steps</a></h2>
+<ol>
+<li>Prepare the flax eggs. Combine the ground flaxseed meal with 5 tablespoons water. Stir and let sit for 15 minutes to gel together. (15)</li>
+<li>Preheat the oven to 350ºF/175ºC. Line two large baking sheets with parchment paper.</li>
+<li>In a large bowl, mix together the dry ingredients: oats, coconut, baking powder, baking soda, and salt.</li>
+<li>In a medium bowl, mix together the wet ingredients: almond butter, maple syrup, vanilla, and prepared flax eggs. Whisk until smooth and thick.</li>
+<li>Pour the wet mixture into the dry ingredients, using a silicone spatula to mix everything until the mixture resembles a cookie dough. Fold in your desired mix-ins (dried fruit, pumpkin/sunflower seeds, and hemp seeds) using the spatula.</li>
+<li>If the dough is too sticky to handle, refrigerate it for 10-15 minutes to firm up slightly. (10-15)</li>
+<li>Use an ice cream scoop or large spoon to scoop about 3 tablespoons of dough onto the prepared baking sheet, spacing them about 1/2 inch apart. Alternatively, measure out 3 tablespoons and shape the dough into a round using your hands. Lightly flatten the top of each cookie with your hands or a fork.</li>
+<li>Bake the cookies for about 18-20 minutes. (18-20)</li>
+<li>Cool for 5 minutes. Use a spatula to carefully transfer them to a cooling rack. Store leftover cookies in an airtight container on the counter for 5 to 7 days. (5)</li>
+</ol>
+<h2 id="sources"><a class="header" href="#sources">Sources</a></h2>
+<ul>
+<li><a href="https://rainbowplantlife.com/healthy-vegan-breakfast-cookies/">https://rainbowplantlife.com/healthy-vegan-breakfast-cookies/</a></li>
+</ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="halfys-biryani"><a class="header" href="#halfys-biryani">Halfy's Biryani</a></h1>
 <p>I wasn't satisifed with most of the veg biryani options out there so I ended up writing my own by combining some of them together.</p>
 <p><img src="images/halfy-biryani/header.jpg" alt="Halfy's Biryani header image" /></p>
-<h2 id="ingredients"><a class="header" href="#ingredients">Ingredients</a></h2>
+<h2 id="ingredients-1"><a class="header" href="#ingredients-1">Ingredients</a></h2>
 <ul>
 <li>1 ml Olive Oil</li>
 <li>1 ml One Diced Onion</li>
@@ -174,7 +208,7 @@
 <li>1 ml Cubed Paneer</li>
 <li>1 ml Chillies</li>
 </ul>
-<h2 id="steps"><a class="header" href="#steps">Steps</a></h2>
+<h2 id="steps-1"><a class="header" href="#steps-1">Steps</a></h2>
 <ol>
 <li>Cook the vegetables in a little oil, cumin and salt until just a little soft. Set aside (10 minutes)<br />
 <img src="images/halfy-biryani/a.jpg" alt="Step image a" /></li>
@@ -188,7 +222,7 @@
 <li>Take out from the oven and give it a stir, if some liquid remains then cook on the hob until it's still moist but not very wet.</li>
 <li>Scatter coriander and chillies, and mix in some yougart.</li>
 </ol>
-<h2 id="sources"><a class="header" href="#sources">Sources</a></h2>
+<h2 id="sources-1"><a class="header" href="#sources-1">Sources</a></h2>
 <ul>
 <li><a href="https://www.bbcgoodfood.com/recipes/lamb-biryani">https://www.bbcgoodfood.com/recipes/lamb-biryani</a></li>
 <li><a href="https://www.bbcgoodfood.com/recipes/cheats-beetroot-biriyani">https://www.bbcgoodfood.com/recipes/cheats-beetroot-biriyani</a></li>
