deploy: 3cbf73c91f7fbf6745ba40e5da5783359d145e07

--- a/print.html
+++ b/print.html
@@ -86,7 +86,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Recipes</a></li><li class="chapter-item expanded affix "><li class="part-title">Breakfast</li><li class="chapter-item expanded "><a href="vegan-breakfast-cookies.html">Vegan Breakfast Cookies</a></li><li class="chapter-item expanded affix "><li class="part-title">food</li><li class="chapter-item expanded "><a href="halfy-biryani.html">Halfy's Biryani</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Recipes</a></li><li class="chapter-item expanded affix "><li class="part-title">Breakfast</li><li class="chapter-item expanded "><div>Vegan</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="vegan-breakfast-cookies.html">Vegan Breakfast Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Dinner</li><li class="chapter-item expanded "><div>Fish</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="crispy-cod-fingers.html">Crispy cod fingers with wedges &amp; dill slaw</a></li></ol></li><li class="chapter-item expanded "><div>Vegan</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="halfy-biryani.html">Halfy's Biryani</a></li></ol></li><li class="chapter-item expanded "><div>Mexican</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="taco.html">Taco</a></li></ol></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -157,76 +157,168 @@
                         <h1 id="recipes"><a class="header" href="#recipes">Recipes</a></h1>
 <p>A collection of recipes (for food) that I have used in the past.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="vegan-breakfast-cookies"><a class="header" href="#vegan-breakfast-cookies">Vegan Breakfast Cookies</a></h1>
-<p>These Vegan Breakfast Cookies are healthy enough to eat for breakfast or a post-workout snack! Made with oats, seeds, and almond butter, these cookies are deceptively delicious and are vegan, gluten-free, oil-free, refined sugar-free, and soy-free! </p>
+<p>These Vegan Breakfast Cookies are healthy enough to eat for breakfast or a post-workout snack! Made with oats, seeds, and almond butter, these cookies are deceptively delicious and are vegan, gluten-free, oil-free, refined sugar-free, and soy-free!</p>
 <p><img src="images/vegan-breakfast-cookies/header.jpg" alt="Vegan Breakfast Cookies header image" /></p>
-<h2 id="ingredients"><a class="header" href="#ingredients">Ingredients</a></h2>
 <ul>
-<li>2 tbs Ground Flaxseed Meal</li>
-<li>2 cups Rolled Oats (certified gluten-free, as needed)</li>
-<li>0.5 cups Shredded Coconut</li>
-<li>0.5 tsp Baking Powder</li>
-<li>0.5 tsp Baking Soda</li>
-<li>0.5 tsp Fine Sea Salt</li>
-<li>0.75 cups Smooth, Creamy Variety of Almond Butter (can substitute Cashew Butter)</li>
-<li>0.5 cups Pure Maple Syrup</li>
-<li>1.5 tsp Pure Vanilla Extract</li>
-<li>1.5 cups Dried Fruit (Cranberries, Currants, Chopped Apricots)</li>
-<li>0.5 cups Pepitas and/or Sunflower Seeds, chopped</li>
-<li>0.33 cups Hemp Seeds (aka Hemp Hearts)</li>
+<li>Prep time: 30 minutes</li>
+<li>Cook time: 30 minutes</li>
+<li>Chill time: 5 minutes</li>
+<li>Total time: 65 minutes</li>
 </ul>
+<h2 id="ingredients"><a class="header" href="#ingredients">Ingredients</a></h2>
+<p>Serves 24</p>
+<table><thead><tr><th align="right">Amount</th><th>Ingredient</th><th>Comment</th></tr></thead><tbody>
+<tr><td align="right">2 tbs</td><td>Ground Flaxseed Meal</td><td></td></tr>
+<tr><td align="right">2 cups</td><td>Rolled Oats</td><td>Certified gluten-free, as needed</td></tr>
+<tr><td align="right">0.5 cups</td><td>Shredded Coconut</td><td></td></tr>
+<tr><td align="right">0.5 tsp</td><td>Baking Powder</td><td></td></tr>
+<tr><td align="right">0.5 tsp</td><td>Baking Soda</td><td></td></tr>
+<tr><td align="right">0.5 tsp</td><td>Fine Sea Salt</td><td></td></tr>
+<tr><td align="right">0.75 cups</td><td>Smooth, Creamy Variety of Almond Butter</td><td>Can substitute Cashew Butter</td></tr>
+<tr><td align="right">0.5 cups</td><td>Pure Maple Syrup</td><td></td></tr>
+<tr><td align="right">1.5 tsp</td><td>Pure Vanilla Extract</td><td></td></tr>
+<tr><td align="right">1.5 cups</td><td>Dried Fruit (Cranberries, Currants, Chopped Apricots)</td><td></td></tr>
+<tr><td align="right">0.5 cups</td><td>Pepitas and/or Sunflower Seeds, chopped</td><td></td></tr>
+<tr><td align="right">0.33 cups</td><td>Hemp Seeds</td><td>aka Hemp Hearts</td></tr>
+</tbody></table>
 <h2 id="steps"><a class="header" href="#steps">Steps</a></h2>
 <ol>
-<li>Prepare the flax eggs. Combine the ground flaxseed meal with 5 tablespoons water. Stir and let sit for 15 minutes to gel together. (15)</li>
+<li>Prepare the flax eggs. Combine the ground flaxseed meal with 5 tablespoons water. Stir and let sit for 15 minutes to gel together. (15 minutes)</li>
 <li>Preheat the oven to 350ºF/175ºC. Line two large baking sheets with parchment paper.</li>
 <li>In a large bowl, mix together the dry ingredients: oats, coconut, baking powder, baking soda, and salt.</li>
 <li>In a medium bowl, mix together the wet ingredients: almond butter, maple syrup, vanilla, and prepared flax eggs. Whisk until smooth and thick.</li>
 <li>Pour the wet mixture into the dry ingredients, using a silicone spatula to mix everything until the mixture resembles a cookie dough. Fold in your desired mix-ins (dried fruit, pumpkin/sunflower seeds, and hemp seeds) using the spatula.</li>
-<li>If the dough is too sticky to handle, refrigerate it for 10-15 minutes to firm up slightly. (10-15)</li>
+<li>If the dough is too sticky to handle, refrigerate it for 10-15 minutes to firm up slightly. 10 - 15 minutes)</li>
 <li>Use an ice cream scoop or large spoon to scoop about 3 tablespoons of dough onto the prepared baking sheet, spacing them about 1/2 inch apart. Alternatively, measure out 3 tablespoons and shape the dough into a round using your hands. Lightly flatten the top of each cookie with your hands or a fork.</li>
-<li>Bake the cookies for about 18-20 minutes. (18-20)</li>
-<li>Cool for 5 minutes. Use a spatula to carefully transfer them to a cooling rack. Store leftover cookies in an airtight container on the counter for 5 to 7 days. (5)</li>
+<li>Bake the cookies for about 18-20 minutes. 18 - 20 minutes)</li>
+<li>Cool for 5 minutes. Use a spatula to carefully transfer them to a cooling rack. Store leftover cookies in an airtight container on the counter for 5 to 7 days. (5 minutes)</li>
 </ol>
 <h2 id="sources"><a class="header" href="#sources">Sources</a></h2>
 <ul>
 <li><a href="https://rainbowplantlife.com/healthy-vegan-breakfast-cookies/">https://rainbowplantlife.com/healthy-vegan-breakfast-cookies/</a></li>
 </ul>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="halfys-biryani"><a class="header" href="#halfys-biryani">Halfy's Biryani</a></h1>
-<p>I wasn't satisifed with most of the veg biryani options out there so I ended up writing my own by combining some of them together.</p>
-<p><img src="images/halfy-biryani/header.jpg" alt="Halfy's Biryani header image" /></p>
-<h2 id="ingredients-1"><a class="header" href="#ingredients-1">Ingredients</a></h2>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="crispy-cod-fingers-with-wedges--dill-slaw"><a class="header" href="#crispy-cod-fingers-with-wedges--dill-slaw">Crispy cod fingers with wedges &amp; dill slaw</a></h1>
+<p>A fantastic budget family meal with a crunchy slaw and sweet potato wedges. This easy, crowd pleasing recipe is low-fat and full of fresh flavours</p>
+<p><img src="images/crispy-cod-fingers/header.jpg" alt="Crispy cod fingers with wedges &amp; dill slaw header image" /></p>
 <ul>
-<li>1 ml Olive Oil</li>
-<li>1 ml One Diced Onion</li>
-<li>1 ml Ginger Paste</li>
-<li>1 ml 1-2 cloves garlic</li>
-<li>1 ml Cumin</li>
-<li>1 ml Curry Paste</li>
-<li>1 ml Rice</li>
-<li>1 ml Yogurt</li>
-<li>1 ml Fresh Coriander</li>
-<li>1 ml Vegetable Stock</li>
-<li>1 ml Cubed Paneer</li>
-<li>1 ml Chillies</li>
+<li>Prep time: 30 minutes</li>
+<li>Cook time: 40 minutes</li>
+<li>Total time: 70 minutes</li>
 </ul>
+<h2 id="ingredients-1"><a class="header" href="#ingredients-1">Ingredients</a></h2>
+<p>Serves 4</p>
+<table><thead><tr><th align="right">Amount</th><th>Ingredient</th><th>Comment</th></tr></thead><tbody>
+<tr><td align="right">700 gr</td><td>Sweet potatoes</td><td>3 large</td></tr>
+<tr><td align="right">0.5 tbsp</td><td>Sunflower oil</td><td></td></tr>
+<tr><td align="right">0.25</td><td>Red cabbage</td><td></td></tr>
+<tr><td align="right">0.5</td><td>Red onion</td><td>finely sliced</td></tr>
+<tr><td align="right">6</td><td>Cornichons</td><td>Large, quartered</td></tr>
+<tr><td align="right">3 tbsp</td><td>Greek yogurt or mayonnaise</td><td></td></tr>
+<tr><td align="right">25 gr</td><td>Dill</td><td>finely shopped</td></tr>
+<tr><td align="right">640 gr</td><td>Cod fillets</td><td>4, skimmed</td></tr>
+<tr><td align="right">2</td><td>Eggs</td><td>Large</td></tr>
+<tr><td align="right">100 gr</td><td>Fresh breadcrumbs</td><td></td></tr>
+</tbody></table>
 <h2 id="steps-1"><a class="header" href="#steps-1">Steps</a></h2>
 <ol>
-<li>Cook the vegetables in a little oil, cumin and salt until just a little soft. Set aside (10 minutes)<br />
-<img src="images/halfy-biryani/a.jpg" alt="Step image a" /></li>
+<li>Heat oven to 200C/180C fan/gas 6</li>
+<li>In a bowl, toss the wedges with the oil, 1 tsp salt and 1/4 tsp pepper</li>
+<li>Transfer to a baking sheet and roast. Turning halfway through. The wedges should be crisp and golden brown. 25 - 30 minutes)</li>
+<li>Meanwhile, make the slaw. Remove the cabbage’s white core and discard. Slice the leaves as finely as possible and put in a large mixing bowl with the onion and cornichons</li>
+<li>In another bowl, combine the yogurt or mayonnaise with the dill and 2 tbsp of the cornichons’ pickling liquid</li>
+<li>Mix the dressing with the other slaw ingredients until everything is well coated, then set aside</li>
+<li>Heat grill to high</li>
+<li>Slice each cod fillet into two or three fingers</li>
+<li>Beat the eggs lightly in a shallow bowl</li>
+<li>Tip the breadcrumbs into a separate bowl with a good pinch of salt and pepper</li>
+<li>Dip each cod finger in the egg and then in the breadcrumbs, and place on an oiled baking sheet</li>
+<li>Grill for 6-7 mins or until cooked through and golden 6 - 7 minutes)</li>
+<li>Serve with the crispy wedges and a generous helping of the dill pickle slaw</li>
+</ol>
+<h2 id="nutrition"><a class="header" href="#nutrition">Nutrition</a></h2>
+<table><thead><tr><th>Nutrition</th><th align="right">Amount</th></tr></thead><tbody>
+<tr><td>kcal</td><td align="right">524</td></tr>
+<tr><td>fat</td><td align="right">10g</td></tr>
+<tr><td>saturates</td><td align="right">4g</td></tr>
+<tr><td>carbs</td><td align="right">65g</td></tr>
+<tr><td>sugars</td><td align="right">31g</td></tr>
+<tr><td>fibre</td><td align="right">13g</td></tr>
+<tr><td>protein</td><td align="right">40g</td></tr>
+<tr><td>salt</td><td align="right">2.2g</td></tr>
+</tbody></table>
+<h2 id="sources-1"><a class="header" href="#sources-1">Sources</a></h2>
+<ul>
+<li><a href="https://www.bbcgoodfood.com/recipes/crispy-cod-fingers-wedges-dill-slaw">https://www.bbcgoodfood.com/recipes/crispy-cod-fingers-wedges-dill-slaw</a></li>
+</ul>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="halfys-biryani"><a class="header" href="#halfys-biryani">Halfy's Biryani</a></h1>
+<p>I wasn't satisfied with most of the veg biryani options out there so I ended up writing my own by combining some of them together.</p>
+<p><img src="images/halfy-biryani/header.jpg" alt="Halfy's Biryani header image" /></p>
+<h2 id="ingredients-2"><a class="header" href="#ingredients-2">Ingredients</a></h2>
+<p>Serves undefined</p>
+<table><thead><tr><th align="right">Amount</th><th>Ingredient</th><th>Comment</th></tr></thead><tbody>
+<tr><td align="right">1 ml</td><td>Olive Oil</td><td></td></tr>
+<tr><td align="right">1 ml</td><td>One Diced Onion</td><td></td></tr>
+<tr><td align="right">1 ml</td><td>Ginger Paste</td><td></td></tr>
+<tr><td align="right">1 ml</td><td>1-2 cloves garlic</td><td></td></tr>
+<tr><td align="right">1 ml</td><td>Cumin</td><td></td></tr>
+<tr><td align="right">1 ml</td><td>Curry Paste</td><td></td></tr>
+<tr><td align="right">1 ml</td><td>Rice</td><td></td></tr>
+<tr><td align="right">1 ml</td><td>Yogurt</td><td></td></tr>
+<tr><td align="right">1 ml</td><td>Fresh Coriander</td><td></td></tr>
+<tr><td align="right">1 ml</td><td>Vegetable Stock</td><td></td></tr>
+<tr><td align="right">1 ml</td><td>Cubed Paneer</td><td></td></tr>
+<tr><td align="right">1 ml</td><td>Chillies</td><td></td></tr>
+</tbody></table>
+<h2 id="steps-2"><a class="header" href="#steps-2">Steps</a></h2>
+<ol>
+<li>Cook the vegetables in a little oil, cumin and salt until just a little soft. Set aside (10 minutes)</li>
 <li>Fry the onions on a medium heat for 10 minutes until soft (10 minutes)</li>
-<li>Add the ginger paste, half the garlic and cook for a bit (1 minute)</li>
-<li>Add the veg back and mix in the curry paste (90 seconds)</li>
+<li>Add the ginger paste, half the garlic and cook for a bit (1 minutes)</li>
+<li>Add the veg back and mix in the curry paste (1.5 minutes)</li>
 <li>Add the rice, stock pot and hot water and bring to the boil (2 minutes)</li>
 <li>Heat the oven to 180C</li>
-<li>Stir in the paneer and spinach until just a little liquid is visible, and season.</li>
-<li>Cover the dish with foil and then a lid. Cook in the oven for 20 minutes.</li>
-<li>Take out from the oven and give it a stir, if some liquid remains then cook on the hob until it's still moist but not very wet.</li>
-<li>Scatter coriander and chillies, and mix in some yougart.</li>
+<li>Stir in the paneer and spinach until just a little liquid is visible, and season</li>
+<li>Cover the dish with foil and then a lid. Cook in the oven for 20 minutes</li>
+<li>Take out from the oven and give it a stir, if some liquid remains then cook on the hob until it's still moist but not very wet</li>
+<li>Scatter coriander and chillies, and mix in some yogurt</li>
 </ol>
-<h2 id="sources-1"><a class="header" href="#sources-1">Sources</a></h2>
+<h2 id="sources-2"><a class="header" href="#sources-2">Sources</a></h2>
 <ul>
 <li><a href="https://www.bbcgoodfood.com/recipes/lamb-biryani">https://www.bbcgoodfood.com/recipes/lamb-biryani</a></li>
 <li><a href="https://www.bbcgoodfood.com/recipes/cheats-beetroot-biriyani">https://www.bbcgoodfood.com/recipes/cheats-beetroot-biriyani</a></li>
 </ul>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="taco"><a class="header" href="#taco">Taco</a></h1>
+<p>Delicious taco</p>
+<h2 id="ingredients-3"><a class="header" href="#ingredients-3">Ingredients</a></h2>
+<p>Serves 4</p>
+<table><thead><tr><th align="right">Amount</th><th>Ingredient</th><th>Comment</th></tr></thead><tbody>
+<tr><td align="right">8</td><td>Tortillas and/or taco shells</td><td></td></tr>
+<tr><td align="right">600 gr</td><td>Minced meat</td><td></td></tr>
+<tr><td align="right">50 gr</td><td>Spice mix</td><td></td></tr>
+<tr><td align="right">300 gr</td><td>Salsa sauce</td><td></td></tr>
+<tr><td align="right">240 gr</td><td>Guacamole</td><td></td></tr>
+<tr><td align="right">200 gr</td><td>Sweet corn</td><td></td></tr>
+<tr><td align="right">1</td><td>Onion</td><td></td></tr>
+<tr><td align="right">6</td><td>Tomatoes</td><td></td></tr>
+<tr><td align="right">435 gr</td><td>Pineapple chunks</td><td></td></tr>
+<tr><td align="right">1</td><td>Garlic</td><td></td></tr>
+<tr><td align="right">150 gr</td><td>Jalapeño</td><td></td></tr>
+<tr><td align="right">100 gr</td><td>Sun dried tomatoes</td><td>Optional</td></tr>
+<tr><td align="right">100 gr</td><td>Feta cheese</td><td>Optional</td></tr>
+<tr><td align="right">1</td><td>Bell pepper</td><td></td></tr>
+<tr><td align="right">300 gr</td><td>Grated cheese</td><td></td></tr>
+<tr><td align="right">1</td><td>Lettuce</td><td></td></tr>
+<tr><td align="right">230 gr</td><td>Sour cream</td><td></td></tr>
+</tbody></table>
+<h2 id="steps-3"><a class="header" href="#steps-3">Steps</a></h2>
+<ol>
+<li>Cut all vegetables except lettuce into a large bowl. Mix well together</li>
+<li>Cut lettuce into it's own bowl</li>
+<li>Fry the minced meat until no longer brown</li>
+<li>Add the spice mix and water according to the packaging. Cook until almost dry</li>
+<li>Prepare tortillas or shells according to the packaging.</li>
+<li>Serve with grated cheese</li>
+</ol>
 
                     </main>
 
