--- a/print.html
+++ b/print.html
@@ -208,7 +208,7 @@
 <h2 id="ingredients-1"><a class="header" href="#ingredients-1">Ingredients</a></h2>
 <p>Serves 4</p>
 <table><thead><tr><th align="right">Amount</th><th>Ingredient</th><th>Comment</th></tr></thead><tbody>
-<tr><td align="right">700 gr</td><td>Sweet potatoes</td><td>3 large</td></tr>
+<tr><td align="right">700 gr</td><td>Sweet potatoes</td><td>3 large. Scrubbed and cut into wedges</td></tr>
 <tr><td align="right">0.5 tbsp</td><td>Sunflower oil</td><td></td></tr>
 <tr><td align="right">0.25</td><td>Red cabbage</td><td></td></tr>
 <tr><td align="right">0.5</td><td>Red onion</td><td>finely sliced</td></tr>
