deploy: 3e488e34efc45ce2e638033c73278d462aa583c0

--- a/print.html
+++ b/print.html
@@ -211,7 +211,7 @@
 <tr><td align="right">700 gr</td><td>Sweet potatoes</td><td>3 large. Scrubbed and cut into wedges</td></tr>
 <tr><td align="right">0.5 tbsp</td><td>Sunflower oil</td><td></td></tr>
 <tr><td align="right">0.25</td><td>Red cabbage</td><td></td></tr>
-<tr><td align="right">0.5</td><td>Red onion</td><td>finely sliced</td></tr>
+<tr><td align="right">0.5</td><td>Red onion</td><td>Finely sliced</td></tr>
 <tr><td align="right">6</td><td>Cornichons</td><td>Large, quartered</td></tr>
 <tr><td align="right">3 tbsp</td><td>Greek yogurt or mayonnaise</td><td></td></tr>
 <tr><td align="right">25 gr</td><td>Dill</td><td>finely shopped</td></tr>
