--- a/halfy-biryani.html
+++ b/halfy-biryani.html
@@ -174,6 +174,7 @@
 <tr><td align="right">1 ml</td><td>Vegetable Stock</td><td></td></tr>
 <tr><td align="right">1 ml</td><td>Cubed Paneer</td><td></td></tr>
 <tr><td align="right">1 ml</td><td>Chillies</td><td></td></tr>
+<tr><td align="right">1 ml</td><td>Spinach</td><td></td></tr>
 </tbody></table>
 <h2 id="steps"><a class="header" href="#steps">Steps</a></h2>
 <ol>
