--- a/print.html
+++ b/print.html
@@ -268,6 +268,7 @@
 <tr><td align="right">1 ml</td><td>Vegetable Stock</td><td></td></tr>
 <tr><td align="right">1 ml</td><td>Cubed Paneer</td><td></td></tr>
 <tr><td align="right">1 ml</td><td>Chillies</td><td></td></tr>
+<tr><td align="right">1 ml</td><td>Spinach</td><td></td></tr>
 </tbody></table>
 <h2 id="steps-2"><a class="header" href="#steps-2">Steps</a></h2>
 <ol>
